# sears-home-services-ai-agent

./: .gitattributes  .gitignore  AGENTS.md  PLAN.md  PROMPTS.md  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_technician_reference_schema.py  0002_create_customer_appointment_schema.py  0003_create_diagnostic_session_schema.py  0004_create_call_session_schema.py  0005_create_image_upload_schema.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  repositories.py  schemas.py  seed.py
backend/app/agent/: __init__.py  extraction.py  providers.py  safety.py  tools.py
backend/app/api/: diagnostics.py  scheduling.py  twilio_voice.py  uploads.py
backend/app/services/: diagnostics.py  email.py  scheduling.py  storage.py  twilio_voice.py  uploads.py  vision.py
backend/infra/: README.md  backend.hcl.example  locals.tf  main.tf  outputs.tf  prod.tfvars.example  providers.tf  variables.tf  versions.tf
backend/tests/: conftest.py  test_agent_tools.py  test_app.py  test_config.py  test_diagnostics_api.py  test_diagnostics_service.py  test_extraction.py  test_migrations.py  test_openai_provider.py  test_provider_adapters.py  test_scaffold.py  test_scheduling_api.py  test_scheduling_service.py  test_seed_and_repositories.py  test_twilio_voice.py  test_uploads_api.py  test_uploads_service.py  test_vision_worker.py
(+121 files in other folders)
