[project]
name = "shs-ai-agent-backend"
version = "0.1.0"
description = "Backend for the Sears Home Services voice AI appliance diagnostic agent"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.18.5",
  "fastapi>=0.138.2",
  "openai>=2.44.0",
  "psycopg[binary]>=3.3.4",
  "pydantic-settings>=2.14.2",
  "sqlalchemy>=2.0.51",
  "twilio>=9.10.9",
  "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.5.0",
  "pip-audit>=2.10.1",
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["infra*", "tests*"]
